--- a/index.css
+++ b/index.css
@@ -26,3 +26,9 @@ html{
 #add-new-todo-button:active{
   box-shadow: 1px 1px 1px #90A4AE;
 }
+li{
+  padding: 5px;
+  margin-bottom:10px;
+}
+body{background-color:yellow}
+ h1{color:blue;}
