--- a/index.css
+++ b/index.css
@@ -30,5 +30,7 @@ li{
   padding: 5px;
   margin-bottom:10px;
 }
-body{background-color:yellow}
- h1{color:blue;}
+body{background-color:rgb(187,159,225)}
+ h1{color:white;
+ font-size: 50px;
+ }
