--- a/index.css
+++ b/index.css
@@ -34,3 +34,8 @@ body{background-color:rgb(187,159,225)}
  h1{color:white;
  font-size: 50px;
  }
+ ul{font-size: 25px;}
+ 
+.completed-todo{
+  text-decoration: line-through;
+}
